--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "uuid": "^9.0.1"
   }
 }
